--- a/files/markdown-pages/styles.css
+++ b/files/markdown-pages/styles.css
@@ -35,9 +35,18 @@ body {
 
 textarea {
   width: 100%;
+  background-color: rgba(255,255,255,1);
 }
 
 #inputbuttons {
   display: flex;
   justify-content: flex-end;
+}
+
+#contents > *{
+  background-color: rgba(255,255,255, 0.75);
+}
+
+#md-file-contents {
+  background-color: white;
 }
